--- a/style.css
+++ b/style.css
@@ -268,6 +268,11 @@ span{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
+}
+.foot-link{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
 }
 
 .foot-pannel2{
